--- a/blog.css
+++ b/blog.css
@@ -14,10 +14,11 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: Work Sans;
-    background-image: url("articlewallpaper.jpg");
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.001),rgba(0, 0, 0, 0.767)),url("/loginwallpaper01.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+
 }
 /*-------blog----*/
 #blog{
@@ -78,6 +79,7 @@ body{
     display: grid;
     grid-template-columns: 2fr 1fr;
     border: 2px solid black;
+    background-color: rgba(255, 255, 255, 0.664);
     /*margin: 20px;*/
 }
 .box-right{
@@ -86,6 +88,7 @@ body{
     display: grid;
     grid-template-columns: 1fr 2fr;
     border: 2px solid black;
+    background-color: rgba(255, 255, 255, 0.664);
     /*margin: 20px;*/
 }
 .blog-img{
@@ -119,13 +122,14 @@ body{
 .blog-text p{
     color: #000000;
     font-style: italic;
-    font-size: 00.9rem;
+    font-size: 1rem;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
     margin: 20px 0;
+    font-weight: 600;
 }
 .blog-text a{
     color: #000000; 
@@ -146,6 +150,49 @@ body{
   .button:hover{
       background: #4E393C;
   }
+  .wrapper{
+    display: flex;
+    position: relative;
+    padding: 20px;
+    /*position: fixed;*/
+   
+   }
+   .logo{
+       width: 20%;
+   }
+   .logo h1 span{
+       text-transform: uppercase;
+   }
+   .wrapper ul{
+       width: 50%;
+       list-style: none;
+       /*background: blue;*/
+       position: absolute;
+       left: 750px;
+       align-items: center;
+      }
+   .wrapper ul li{
+       display: inline;
+       /*margin-right: 40px;*/
+       margin-left: 50px;
+      }
+      .wrapper ul li a{
+       text-decoration: none;
+       font-size: 30px;
+       color: black;
+      }
+      .wrapper ul li button{
+          border-style: none;
+          background-color: #4E393C;
+          width: 100px;
+          padding: 10.0px;
+          border-radius: 3px;
+          cursor: pointer;
+          color: #C4C4C4;
+          transform: translateY(-4px);
+          /*margin: 300px;*/
+          position: absolute;
+      }
 
 @media(max-width:1250px){
     .blog-box{
